# redgold

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  LICENSE.md  NOTICE  README.md  SECURITY.md  build.rs  cargo_config  log4rs.yml  mac_cross.Dockerfile  release.Dockerfile
ai/: Cargo.toml
ai-py/: agent_loop.py  claude_dbg.py  claude_fmt.py  code_file_enrichment.py  commands.py  debug_line_readings.py  debug_tools.py  err_test.py  es_search.py  gemini-json.py  gemini_dbg.py  get_openai_models.py  git_scrape.py  lang_server.py  lang_server_new.py  matrix.py  new_issue.py  pyproject.toml  repo_reader.py  requirements.txt  summarize.py  summarize_whole_repo.py  tree_sitter_debug.py  tree_sitter_debug2.py  unsupervised_agent_loop.py  voice_matrix.py
ai-py/deepseek_wrapper/: ds_example.py
ai-py/file_ux/: create.py  edit_files.py  file_viewer.py  fs_watcher.py  git_add.py  git_diffs.py  git_diffs_dec.py
ai-py/git_stuff/: get_actions_info.py
ai-py/mcp_wrapper/: brave_search_example.py  example_mcp_def.py
ai-py/ollama_wrapper/: deepseek_with_tools.py  example_deepseek_local.py
ai-py/prompts/: __init__.py
ai-py/rag/: test_pgvec.py
ai-py/rg_proto/structs/: structs_pb2.py  structs_pb2.pyi
ai-py/templates/: agent_system.py
ai-py/tools/: commands.py  lc_tools_example.py  lc_tools_example2.py  lc_tools_v2.py  tool_match.py
ai-py/ts_ast/: ts_functions.py  ts_structs.py  ts_util.py  usages.py
ai/src/: claude_dbg.rs  directory_code_reader.rs  embed.rs  git_diffs.rs  github_info.rs  lib.rs  lsp_analyze.rs  main.rs
ai/src/prompts/: agent-test.txt
common/: Cargo.toml
common-no-wasm/: Cargo.toml
common-no-wasm/src/: cmd.rs  data_folder_read_ext.rs  lib.rs  machine_info.rs  tx_new.rs
common/src/: external_resources.rs  flume_send_help.rs  lib.rs
core/: Cargo.toml
crates/common/: Cargo.toml
crates/common-no-wasm/: Cargo.toml
crates/common-no-wasm/src/: arc_swap_wrapper.rs  cmd.rs  data_folder_read_ext.rs  lib.rs  machine_info.rs  output_handlers.rs  ssh_like.rs  stream_handlers.rs  tx_new.rs
crates/common/src/: external_resources.rs  flume_send_help.rs  lib.rs  log.rs  trace_setup.rs
crates/daq/: Cargo.toml
crates/daq/src/: btc_daq.rs  eth.rs  external_net_daq.rs  lib.rs
crates/data/: Cargo.toml
crates/data/migrations/: 20220602030199_price_time.sql  20220602030205_observation.sql  20220602030213_config.sql  20220602030501_rejected_transactions.sql  20220616030216_multiparty_signatures.sql  20220616030255_address_transaction.sql
crates/data/src/: address_transaction.rs  config.rs  data_store.rs  error_convert.rs  lib.rs  mp_store.rs  observation_store.rs  parquet_export.rs  parquet_full_index.rs  parquet_min_index.rs  peer.rs  price_time.rs  servers.rs  state_store.rs  transaction_insert.rs  transaction_observability.rs  transaction_store.rs  utxo_store.rs
crates/keys/: Cargo.toml
crates/keys/src/: address_external.rs  address_support.rs  debug.rs  external_tx_support.rs  lib.rs  proof_support.rs  public_key_parse_support.rs  request_support.rs  transaction_support.rs  tx_proof_validate.rs  word_pass_support.rs  xpub_wrapper.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: lib.rs  safe_testing.rs
crates/ops/: Cargo.toml
crates/ops/src/: backup_datastore.rs  lib.rs
crates/rpc-integ/: Cargo.toml
crates/rpc-integ/src/: bitcoin_zmq.rs  lib.rs
crates/schema/: Cargo.toml  json_build_config.json
crates/schema/src/: address.rs  airgap_msg.rs  block.rs  config_data.rs  constants.rs  contract.rs  control.rs  exec.rs  explorer.rs  fee_validator.rs  hash.rs  input.rs  lib.rs  merkle_proof.rs  multiparty.rs  observation.rs  output.rs  peers.rs  pow.rs  proof.rs  proto_serde.rs  public_key.rs  response.rs  seeds.rs  servers.rs  udp.rs  (+7 more)
crates/sdk/: Cargo.toml
data/: Cargo.toml  README.md  build.rs
data/migrations/: 20220602030201_block.sql  20220602030202_mnemonic.sql  20220602030204_transactions.sql  20220602030205_observation.sql  20220602030206_observation_edge.sql  20220602030207_peers.sql  20220602030208_nodes.sql  20220602030208_peer_key.sql  20220602030211_address_block.sql  20220602030217_transaction_edge.sql  20220602030250_utxo.sql  20220602030556_state.sql  20220616030215_multiparty.sql  20220616030216_multiparty_signatures.sql  20220616030255_address_transaction.sql  20220616030501_multiparty_bridge.sql  20240201000000_add_is_test_column_to_transactions.down.sql  20240201000000_add_is_test_column_to_transactions.up.sql
data/src/: address_block.rs  address_transaction.rs  config.rs  data_store.rs  lib.rs  mp_store.rs  observation_store.rs  parquet_export.rs  parquet_full_index.rs  parquet_min_index.rs  peer.rs  price_time.rs  servers.rs  state_store.rs  transaction_insert.rs  transaction_observability.rs  transaction_store.rs  utxo_store.rs
executor/: Cargo.toml
executor/src/: evm_wrapper.rs  extism_debug.rs  extism_wrapper.rs  fork_ref_transact.rs  hello_world.rs  lib.rs  revm_wrapper.rs
fs/: Cargo.toml
fs/src/: debug_fs_test.rs
gui/: Cargo.toml
gui/src/: common.rs  image_capture.rs  image_capture_openpnp.rs  image_capture_stub.rs  lib.rs  main.rs
keys/: Cargo.toml
keys/src/: address_external.rs  address_support.rs  debug.rs  lib.rs  proof_support.rs  public_key_parse_support.rs  request_support.rs  transaction_support.rs  tx_proof_validate.rs  word_pass_support.rs  xpub_wrapper.rs
schema/: Cargo.toml  build.rs  json_build_config.json
schema/src/: address.rs  block.rs  config_data.rs  constants.rs  contract.rs  control.rs  debug_version.rs  errors.rs  exec.rs  explorer.rs  fee_validator.rs  hash.rs  input.rs  lib.rs  local_stored_state.rs  multiparty.rs  observation.rs  output.rs  peers.rs  pow.rs  proof.rs  public_key.rs  response.rs  seeds.rs  server_config.rs  servers.rs  signature.rs  structs.proto  transaction.rs  transaction_builder.rs  transaction_info.rs  trust.rs  tx_schema_validate.rs  udp.rs  utxo_entry.rs  utxo_id.rs  weighting.rs
sdk/: Cargo.toml  compile.sh
sdk-client/: Cargo.toml
sdk-client/src/: lib.rs
sdk/src/: entry.rs  example.rs  lib.rs
(+872 files in other folders)
