[package]
name = "redgold-ai"
version = "0.1.22"
edition = "2021"
authors = ["Redgold"]
description = "p2p database / compute engine & portfolio target models"
documentation = "https://dev.docs.redgold.io/"
readme = "README.md"
homepage = "https://redgold.io"
repository = "https://github.com/redgold-io/redgold"
license = "MIT"
keywords = ["crypto", "cryptocurrency", "reputation", "decentralized", "p2p"]
categories = ["cryptography::cryptocurrencies"]



[dependencies]
tiktoken-rs = "0.5.8"
tokio = { version = "1.36.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "process"] }
jemini = "0.1.1"
async-openai = "0.19.0"
redgold-schema = "0.1.22"

# LSP
lsp-types = "0.95.0"
#lsp-server = "0.7.6"
serde_json = "1.0.114"
async-lsp = "0.2.0"
futures = "0.3.30"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-process = "2.1.0"
flume = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
octocrab = "0.34.3"

# LLMs
# this out appears out of date, but it exists?
allms = "0.7.5"
# this one appears recent.
llmclient = "0.3.0"
ollama-rs = "0.2.0"