[package]
name = "redgold-common-no-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
redgold-schema = {workspace = true}
async-trait = { workspace = true }
tokio = { version = "1.36.0", features = ["rt", "process", "fs"]}
rand = { workspace = true }
itertools = { workspace = true }