[package]
name = "redgold-data"
version = "0.1.10"
edition = "2021"
authors = ["Redgold"]
description = "p2p database / compute engine & portfolio target models"
documentation = "https://dev.docs.redgold.io/"
readme = "../README.md"
homepage = "https://redgold.io"
repository = "https://github.com/redgold-io/redgold"
license = "MIT"
keywords = ["crypto", "cryptocurrency", "reputation", "decentralized", "p2p"]
categories = ["cryptography::cryptocurrencies"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls" , "postgres", "sqlite"] } # Tokio:
redgold-schema = { workspace = true }
redgold-keys = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
hex = { workspace = true }
log = { workspace = true }

polars = "0.32.1"

[build-dependencies]
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls" , "postgres", "sqlite"] } # Tokio:
tokio = { version = "1.0.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "full"] }
rusqlite = "0.29.0"
