[package]
name = "redgold-data"
version = "0.1.28"
edition = "2021"
authors = ["Redgold"]
description = "p2p database / compute engine & portfolio target models"
documentation = "https://dev.docs.redgold.io/"
readme = "../README.md"
homepage = "https://redgold.io"
repository = "https://github.com/redgold-io/redgold"
license = "MIT"
keywords = ["crypto", "cryptocurrency", "reputation", "decentralized", "p2p"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls" , "sqlite"] } # Tokio:
redgold-schema = { workspace = true }
redgold-common-no-wasm = { workspace = true }
redgold-keys = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
futures = {workspace = true}
async-trait = {workspace = true}
polars = { features = ["parquet"], version = "0.38.3" }
chrono = "0.4.35"
toml = {workspace = true}
tokio = { version = "1.36.0", features = ["rt", "process"]}

[build-dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls" , "sqlite"] } # Tokio:
tokio = { workspace = true }
rusqlite = "0.29.0"
dirs = {workspace = true}