[package]
name = "redgold-executor"
version = "0.1.4"
edition = "2021"

# https://askubuntu.com/questions/1332666/how-to-install-llvm-12-for-ubuntu-16-04
#printf "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-12 main" |sudo tee /etc/apt/sources.list.d/llvm-toolchain-xenial-12.list
#wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key |sudo apt-key add -
#sudo apt update
#sudo apt install llvm-12
[dependencies]
#wasmer = { version="2.3.0", features = ['dylib']} #, default-features=true, features = ["compiler", "cranelift", "universal"]}
#anyhow = "1.0.58"
##wasmer-compiler-singlepass = "2.3.0"
##wasmer-compiler-cranelift = "2.3.0"
#wasmer-compiler = "2.3.0"
#wasmer-compiler-llvm = "2.3.0"
##llvmenv = "0.3.2"
##llvm-sys = "120"
extism = "0.4.0"
