[package]
name = "redgold-executor"
version = "0.1.5"
edition = "2021"

# https://askubuntu.com/questions/1332666/how-to-install-llvm-12-for-ubuntu-16-04
#printf "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-12 main" |sudo tee /etc/apt/sources.list.d/llvm-toolchain-xenial-12.list
#wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key |sudo apt-key add -
#sudo apt update
#sudo apt install llvm-12
[dependencies]
#wasmer = { version="2.3.0", features = ['dylib']} #, default-features=true, features = ["compiler", "cranelift", "universal"]}
#anyhow = "1.0.58"
##wasmer-compiler-singlepass = "2.3.0"
##wasmer-compiler-cranelift = "2.3.0"
#wasmer-compiler = "2.3.0"
#wasmer-compiler-llvm = "2.3.0"
##llvmenv = "0.3.2"
##llvm-sys = "120"
extism = "0.4.0"
evm = {"version" = "0.39.1", features = ["with-codec"]}
primitive-types = "0.12.1"
parity-scale-codec = "3.6.4"
#serde = { version = "1.0.130"}
sp-io = "24.0.0"
#hex = "0.4.3"


revm = {version = "3.3.0", features = ["ethersdb", "dev"]}

auto_impl = { version = "1.1", default-features = false }

# Optional
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# ethersdb
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
ethers-providers = { version = "2.0" }
ethers-core = { version = "2.0" }

futures = { version = "0.3.27" }


hex-literal = "0.4"
ethers-contract = { version = "2.0.3", default-features = true }
hex = "0.4.3"
bytes = "1.4.0"
anyhow = "1.0.71"
criterion = "0.5"

[features]
#default = ["std", "secp256k1"]
#dev = [
#    "memory_limit",
#    "optional_balance_check",
#    "optional_block_gas_limit",
#    "optional_eip3607",
#    "optional_gas_refund",
#    "optional_no_base_fee",
#]
#secp256k1 = ["revm-precompile/secp256k1"]
#memory_limit = ["revm-interpreter/memory_limit"]
#no_gas_measuring = ["revm-interpreter/no_gas_measuring"]
#optional_balance_check = ["revm-interpreter/optional_balance_check"]
#optional_block_gas_limit = ["revm-interpreter/optional_block_gas_limit"]
#optional_eip3607 = ["revm-interpreter/optional_eip3607"]
#optional_gas_refund = ["revm-interpreter/optional_gas_refund"]
#optional_no_base_fee = ["revm-interpreter/optional_no_base_fee"]
#std = ["revm-interpreter/std"]
#ethersdb = [ "std",
#    "tokio", "futures", "ethers-providers", "ethers-core"
#]
#serde = ["dep:serde", "dep:serde_json", "revm-interpreter/serde"]
#arbitrary = ["revm-interpreter/arbitrary"]
# deprecated feature
web3db = []
with-serde = []

