[package]
name = "redgold-executor"
version = "0.1.8"
edition = "2021"
authors = ["Redgold"]
description = "p2p database / compute engine & portfolio target models"
documentation = "https://dev.docs.redgold.io/"
readme = "../README.md"
homepage = "https://redgold.io"
repository = "https://github.com/redgold-io/redgold"
license = "MIT"
keywords = ["crypto", "cryptocurrency", "reputation", "decentralized", "p2p"]
categories = ["cryptography::cryptocurrencies"]

# https://askubuntu.com/questions/1332666/how-to-install-llvm-12-for-ubuntu-16-04
#printf "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-12 main" |sudo tee /etc/apt/sources.list.d/llvm-toolchain-xenial-12.list
#wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key |sudo apt-key add -
#sudo apt update
#sudo apt install llvm-12
[dependencies]
redgold-schema = {workspace = true}


#wasmer = { version="2.3.0", features = ['dylib']} #, default-features=true, features = ["compiler", "cranelift", "universal"]}
#anyhow = "1.0.58"
##wasmer-compiler-singlepass = "2.3.0"
##wasmer-compiler-cranelift = "2.3.0"
#wasmer-compiler = "2.3.0"
#wasmer-compiler-llvm = "2.3.0"
##llvmenv = "0.3.2"
##llvm-sys = "120"

#Extism related
extism = "0.4.0"

# Parity EVM crate related
evm = {"version" = "0.39.1", features = ["with-codec"]}
primitive-types = "0.12.1"
parity-scale-codec = "3.6.4"
#serde = { version = "1.0.130"}
sp-io = "24.0.0"
#hex = "0.4.3"


# REVM related
revm = {version = "3.3.0", features = ["ethersdb", "dev"]}
auto_impl = { version = "1.1", default-features = false }
# Optional
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
# ethersdb
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
ethers-providers = { version = "2.0" }
ethers-core = { version = "2.0" }
futures = { version = "0.3.27" }
hex-literal = "0.4"
ethers-contract = { version = "2.0.3", default-features = true }
hex = "0.4.3"
bytes = "1.4.0"
anyhow = "1.0.71"
criterion = "0.5"



