[package]
name = "redgold-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fuser = "0.14.0"
libc = "0.2.101"
dirs = "5.0.1"