[package]
name = "redgold-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
redgold-schema = {workspace = true}
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
rqrr = "0.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
openpnp_capture = "0.2.4"
openpnp_capture_sys = "0.4.0"
