[package]
name = "redgold-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
redgold-schema = {workspace = true}
redgold-common = {workspace = true}
redgold-common-no-wasm = {workspace = true}
serde = { workspace = true, features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
rqrr = "0.6.0"
eframe = "0.25.0" # Gives us egui, epi and web+native backends
egui_extras = {version = "0.25.0", features = ["default", "image", "all_loaders"]}
strum = "0.25"
strum_macros = "0.25"
log = "0.4.21"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# HACK: pin web-sys to <0.3.70 until a new `eframe` is released containing
# the following PR: https://github.com/emilk/egui/pull/4980
version = ">= 0.3.4, < 0.3.70"


[target.'cfg(target_os = "linux")'.dependencies]
openpnp_capture = "0.2.4"
openpnp_capture_sys = "0.4.0"
