[package]
name = "redgold-keys"
version = "0.1.23"
edition = "2021"
authors = ["Redgold"]
description = "p2p database / compute engine & portfolio target models"
documentation = "https://dev.docs.redgold.io/"
readme = "../README.md"
homepage = "https://redgold.io"
repository = "https://github.com/redgold-io/redgold"
license = "MIT"
keywords = ["crypto", "cryptocurrency", "reputation", "decentralized", "p2p"]
categories = ["cryptography::cryptocurrencies"]

#edition = { worspace = true }
#authors = { worspace = true }
#description = { worspace = true }
#documentation = { worspace = true }
#readme = { worspace = true }
#homepage = { worspace = true }
#repository = { worspace = true }
#license = { worspace = true }
#keywords = { worspace = true }
#categories = { worspace = true }

[dependencies]
# workspace = true caused an error here? maybe
redgold-schema = { path = "../schema", version = "0.1.23"}

# Make all the non-WASM dependencies optional
tokio = { version = "1.36.0", features = ["rt"]}
bdk = {package="bdk-debug", version = "0.28.1-debug", features = ["default", "keys-bip39", "bip39"]}
#bdk = {package="bdk", version = "0.29.0", features = ["default", "keys-bip39", "bip39", "hardware-signer"]}
rust-crypto = { version = "0.2.36"}
hex = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_with = {workspace = true}
itertools = {workspace = true}
sha3 = {workspace = true}
ethers = "2.0.13"
#ethers-etherscan = "2.0.13"
foundry-block-explorers = "0.2.3"
alloy-chains = "0.1.12"
num-bigint = "0.4"
num-traits = "0.2"
log = "0.4.20"
#elliptic-curve = "0.13.5"

#[dependencies.bitcoin]
#version = "0.21"
#features = ["serde", "bitcoinconsensus"]

